--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -193,7 +193,9 @@ a:hover, a:focus {
 	border-radius: 500px;
 }
 .row {
+	margin:auto;
 	margin-left: -20px;
+	
  *zoom: 1;
 }
 .row:before, .row:after {
@@ -205,7 +207,7 @@ a:hover, a:focus {
 	clear: both;
 }
  [class*="span"] {
- float: left;
+ float: right;
  min-height: 1px;
  margin-left: 20px;
 }
